--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,8 +1,9 @@
 name: Build test
 
 on:
-  push:
-    branches: [ "main" ]
+
+#  push:
+#    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -18,6 +19,9 @@ jobs:
       with:
         dotnet-version: 6.0.x
         
+    - name: Install MAUI Workload
+      run: dotnet workload install maui --ignore-failed-sources
+
     - name: Restore dependencies
       run: dotnet restore .\Source\
       
