--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,8 +2,8 @@ name: Build test
 
 on:
 
-#  push:
-#    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
