Enables console logging in WPF edition.

--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/Pekspro.RadioStorm.Sandbox.WPF.csproj
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/Pekspro.RadioStorm.Sandbox.WPF.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Version>$(VersionPrefix)0.1.0</Version>
@@ -23,6 +23,7 @@
     <PackageReference Include="gong-wpf-dragdrop" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
