--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/appsettings.json
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/appsettings.json
@@ -4,6 +4,17 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
     }
   }
   //"StorageLocation": {
