Updates CommunityToolkit.Mvvm to release version.

--- a/Source/Pekspro.RadioStorm/Pekspro.RadioStorm.csproj
+++ b/Source/Pekspro.RadioStorm/Pekspro.RadioStorm.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="6.5.5" />
     <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
