--- a/Source/Pekspro.RadioStorm.UI/Pekspro.RadioStorm.UI.csproj
+++ b/Source/Pekspro.RadioStorm.UI/Pekspro.RadioStorm.UI.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
   </PropertyGroup>
 
   <ItemGroup>
