--- a/Source/Pekspro.RadioStorm.Sandbox.Console/Pekspro.RadioStorm.Sandbox.Console.csproj
+++ b/Source/Pekspro.RadioStorm.Sandbox.Console/Pekspro.RadioStorm.Sandbox.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <UserSecretsId>dotnet-RadioStormTestWorker-CFB2B7AF-883D-495C-B08D-2D8B65A4D8D0</UserSecretsId>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
 
   <ItemGroup>
