--- a/Source/Pekspro.RadioStorm.Sandbox.WPF/Pekspro.RadioStorm.Sandbox.WPF.csproj
+++ b/Source/Pekspro.RadioStorm.Sandbox.WPF/Pekspro.RadioStorm.Sandbox.WPF.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Version>$(VersionPrefix)0.1.0</Version>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
 
   <ItemGroup>
