--- a/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.csproj
+++ b/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
 
   <ItemGroup>
