Experiment with new player controller.

--- a/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
+++ b/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
@@ -198,6 +198,9 @@
 	  <MauiXaml Update="Views\ChannelProgressBar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\CurrentPlayingLargeControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DebugSettingsControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
