--- a/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
+++ b/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
@@ -45,7 +45,11 @@
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#222222" BaseSize="128,128" />
 
 		<!-- Images -->
-		<MauiImage Include="Resources\Images\*" />
+        <MauiImage Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'"
+              	   Include="Resources\Images\sleeptimer_margin_1of4.svg" TintColor="White" BaseSize="32,32" />
+        
+        <MauiImage Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'"
+              	   Include="Resources\Images\sleeptimer_margin_0.svg" TintColor="White" BaseSize="20,20" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -57,6 +61,7 @@
 	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
 	  <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
 	</ItemGroup>
+
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph\Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph.csproj" />
