--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   SECRETS_FILE: ./Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Secrets/Secrets-Protected.cs
-  BUILD_TIME_FILE: ./Source/Pekspro.RadioStorm/Utilities/BuildInformation-Build.cs
+  BUILD_INFO_FILE: ./Source/Pekspro.RadioStorm/Utilities/BuildInformation-Build.cs
 
 
 jobs:
@@ -46,21 +46,21 @@ jobs:
 
     - name: "Create build time file"
       run: |
-        echo "namespace Pekspro.RadioStorm.Utilities;" >> $env:BUILD_TIME_FILE
-        echo "public static partial class BuildInformation" >> $env:BUILD_TIME_FILE
-        echo "{" >> $env:BUILD_TIME_FILE
-        echo "    static partial void Initialize()" >> $env:BUILD_TIME_FILE
-        echo "    {" >> $env:BUILD_TIME_FILE
-        echo "        Branch = ""${{ github.ref_name }}"";" >> $env:BUILD_TIME_FILE
-        echo "        BuildTimeString = ""${{ env.CURRENT_TIME_UTC_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "        CommitId = ""${{ github.sha }}"";" >> $env:BUILD_TIME_FILE
-        echo "        DotNetVersionString = ""${{ env.NET_VERSION_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "        MauiWorkloadAndroidVersionString = ""${{ env.WORKLOAD_ANDROID_VERSION_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "        MauiWorkloadWindowsVersionString = ""${{ env.WORKLOAD_WINDOWS_VERSION_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "        MauiWorkloadIosVersionString = ""${{ env.WORKLOAD_IOS_VERSION_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "        MauiWorkloadMacCatalysVersionString = ""${{ env.WORKLOAD_MACCATALYST_VERSION_STRING }}"";" >> $env:BUILD_TIME_FILE
-        echo "    }" >> $env:BUILD_TIME_FILE
-        echo "}" >> $env:BUILD_TIME_FILE
+        echo "namespace Pekspro.RadioStorm.Utilities;" > $env:BUILD_INFO_FILE
+        echo "public static partial class BuildInformation" >> $env:BUILD_INFO_FILE
+        echo "{" >> $env:BUILD_INFO_FILE
+        echo "    static partial void Initialize()" >> $env:BUILD_INFO_FILE
+        echo "    {" >> $env:BUILD_INFO_FILE
+        echo "        Branch = ""${{ github.ref_name }}"";" >> $env:BUILD_INFO_FILE
+        echo "        BuildTimeString = ""${{ env.CURRENT_TIME_UTC_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "        CommitId = ""${{ github.sha }}"";" >> $env:BUILD_INFO_FILE
+        echo "        DotNetVersionString = ""${{ env.NET_VERSION_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "        MauiWorkloadAndroidVersionString = ""${{ env.WORKLOAD_ANDROID_VERSION_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "        MauiWorkloadWindowsVersionString = ""${{ env.WORKLOAD_WINDOWS_VERSION_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "        MauiWorkloadIosVersionString = ""${{ env.WORKLOAD_IOS_VERSION_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "        MauiWorkloadMacCatalysVersionString = ""${{ env.WORKLOAD_MACCATALYST_VERSION_STRING }}"";" >> $env:BUILD_INFO_FILE
+        echo "    }" >> $env:BUILD_INFO_FILE
+        echo "}" >> $env:BUILD_INFO_FILE
 
     - name: Upload source
       uses: actions/upload-artifact@v3.1.0
