Add basic version of schedule episode page.

--- a/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
+++ b/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
@@ -96,6 +96,9 @@
 	  <Compile Update="Pages\Channel\ChannelDetailsPage.xaml.cs">
 		<DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
+	  <Compile Update="Pages\Channel\ScheduledEpisodesPage.xaml.cs">
+	    <DependentUpon>ScheduledEpisodesPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\Episode\EpisodeDetailsPage.xaml.cs">
 		<DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
@@ -171,6 +174,9 @@
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Channel\ChannelDetailsPage.xaml">
 	    <SubType>Designer</SubType>
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Channel\ScheduledEpisodesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Episode\EpisodeDetailsPage.xaml">
